--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
   .container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
   
   .app {
@@ -43,3 +45,19 @@
     padding: 6px;
   }
   
+  .recordBtn{
+    width: 30%
+  }
+
+  .show{
+    display: block;
+  }
+
+  .hide{
+    display: none;
+  }
+
+  .headingContainer{
+    width: 400px;
+    margin-bottom: 20px;
+  }
